force-app/main/default/staticresources/python/Disappear/src/objects/Appear_Role__c.object
<CustomObject>
    <description>All Roles in the Appear System
Will use Record Type to distinguish between different group of roles</description>
    <fields>
        <fullName>DisplayOrder__c</fullName>
        <description>DisplayOrder for   PubME Role -
Show the Coordinator first</description>
        <label>Display Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsLogicallyDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SiebelRowId__c</fullName>
        <externalId>true</externalId>
        <label>SiebelRowId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isWritingRole__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox for system to copy a publication team member to PubME table to award ME</description>
        <label>isWritingRole</label>
        <type>Checkbox</type>
    </fields>
    <label>Appear Role</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>isWritingRole__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>DisplayOrder__c</columns>
        <columns>IsLogicallyDeleted__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Appear Roles</pluralLabel>
    <recordTypes>
        <fullName>PubTeamRole</fullName>
        <active>true</active>
        <label>PubTeamRole</label>
    </recordTypes>
    <recordTypes>
        <fullName>ReviewTeamRole</fullName>
        <active>true</active>
        <label>ReviewTeamRole</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>